Update Weblink to 1.2.1